# matsuzawa-2026-02-10

./: .gitignore  EXPERIMENT_README.md  package-lock.json  pyproject.toml  test_sanity.py  test_structure.py
.github/prompts/: run_code_generator.md  run_code_reviewer.md  run_experiment_validator.md
.github/workflows/: compile_latex.yml  prepare_images_for_html.yml  prepare_images_for_latex.yml  run_code_generator.yml  run_code_reviewer.yml  run_evaluation.yml  run_experiment_validator.yml  run_full_experiment.yml  run_main_experiment.yml  run_sanity_check.yml  run_trial_experiment.yml  run_visualization.yml
config/: config.yaml
config/runs/: comparative-0-llama3-svamp.yaml  comparative-1-llama3-svamp.yaml  comparative-1.yaml  proposed-llama3-svamp.yaml  proposed.yaml
src/: __init__.py  evaluate.py  main.py  model.py  preprocess.py  train.py
