[project]
name = "c3-autocot-experiment"
version = "0.1.0"
description = "C3-AutoCoT: Cycle-Consistent & Paraphrase-Invariant Reliability Auto-CoT"
requires-python = ">=3.9"

dependencies = [
    # Core ML frameworks
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    
    # Datasets and embeddings
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.0",
    
    # Scientific computing
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    
    # Experiment management
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
    "omegaconf>=2.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    
    # Utilities
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
